# Rust_Todo_App

./: ReadMe
backend/: Cargo.toml
backend/sql/: 00-recreate-db.sql  01-create-schema.sql  02-dev-seed.sql
backend/src/_tests/: model_db.rs  model_todo.rs
backend/src/model/: db.rs  mod.rs  todo.rs
frontend/: package.json
