[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.28.2", features = ["full"] }
futures = "0.3.28"
thiserror = "1.0.40"
#JSON libs
serde = "1.0.164"
serde_json = "1.0.97"
#Web libs
warp = "0.3.5"
#DB libs
sqlx = { version = "0.6.3", features = ["runtime-tokio-rustls", "postgres"] }
sqlb = "0.3.2"